Fix GWLandscape navbar and tooltip css.
Fixes css issues with GWLandscape.

- Make the navbar solid so that it doesn't overlap the text in the UI.
- Make the tooltip easier to read.

Approved-by: Lewis Lakerink <llakerink@swin.edu.au>

Merged by: Asher <jasherleslie@gmail.com>

See merge request https://gitlab.com/CAS-eResearch/GWDC/code/gwcloud_react_host/-/merge_requests/31

--- a/src/src/assets/gwlandscape/scss/_navbar.scss
+++ b/src/src/assets/gwlandscape/scss/_navbar.scss
@@ -1,5 +1,8 @@
 // Custom styles
-
+.gwlandscape-menu.navbar {
+  background: $white;
+  background: linear-gradient(180deg, rgba(255,255,255,1) 95%, rgba(255,255,255,0) 100%);
+}
 
 .gwlandscape-menu.navbar .navbar-nav .nav-link {
   padding: 0.5rem 1rem 1rem 1rem;
